# gmail-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: mint_token.py
src/gmail_mcp/: __init__.py  attachments.py  auth.py  bootstrap.py  drive_client.py  gmail_client.py  server.py
tests/: conftest.py  test_auth.py  test_bootstrap.py  test_download.py  test_download_local.py  test_search.py  test_send.py  test_server.py  test_smoke.py
